plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.ssafy'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()

    maven {
        url "https://oss.sonatype.org/content/repositories/snapshots/"
    }
}

dependencyManagement {
    imports {
        mavenBom "io.awspring.cloud:spring-cloud-aws-dependencies:3.0.0"
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-batch' // Batch
    testImplementation 'org.springframework.batch:spring-batch-test' // Batch Test

    implementation 'org.hibernate.validator:hibernate-validator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation 'com.google.firebase:firebase-admin:9.3.0'

    // jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // API Docs (Swagger)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'

    runtimeOnly 'com.h2database:h2'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'com.h2database:h2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // web3j
    implementation 'org.web3j:core:4.12.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
    implementation 'com.google.guava:guava:31.1-jre'

    //aws 관련
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-parameter-store'
    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.696'

    // PDF
    implementation 'com.itextpdf:itext7-core:7.2.4'

    implementation 'org.json:json:20230227'  // org.json 사용 (버전은 필요에 따라 조정)
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'

    // DB 로그
    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.1'
}

tasks.named('test') {
    useJUnitPlatform()
}
